syntax = "proto3";

package example;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ExampleService {
  rpc CreateItem(CreateItemRequest) returns (CreateItemResponse);
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc UpdateItem(UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem(DeleteItemRequest) returns (google.protobuf.Empty);
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
  map<string, string> metadata = 3;
}

message CreateItemResponse {
  Item item = 1;
}

message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
  bool found = 2;
}

message UpdateItemRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  map<string, string> metadata = 4;
}

message UpdateItemResponse {
  Item item = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message ListItemsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3;
}

message ListItemsResponse {
  repeated Item items = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  map<string, string> metadata = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}